--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -9,4 +9,4 @@ strategy:
 steps:                   #手続きの記述
 - uses: actions/checkout@v3  #https://github.com/actions/checkoutのバージョン3を使用
 - name: All test             #このジョブの名前
-  run: bash -xv ./test2.bash  #テストのシェルスクリプトを走らせるi
+  run: bash -xv ./test.bash2  #テストのシェルスクリプトを走らせるi
